--- a/.github/workflows/Deploy-Vue-Webapp.yml
+++ b/.github/workflows/Deploy-Vue-Webapp.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: Build webapp
-        run: ng run build
+        run: npm run build
 
       - name: Deploy webapp to Revel CMS
         uses: RevelDigital/webapp-action@v1.0.11
